--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <repository>
      <id>deployment</id>
      <name>Internal Releases</name>
-     <url>http://192.168.1.11:8080/nexus/content/repositories/releases/</url>
+     <url>http://192.168.174.134:8080/nexus-2.11.4-01/content/repositories/releases/</url>
   </repository>
    
   <snapshotRepository>
